--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,50 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
+  <ion-navbar color="primary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title *ngIf="!isSearchbarOpened">
+      <img class="profile-picture" src="../assets/imgs/lg.jpg" />
+      Immob
     </ion-title>
+    <ion-searchbar *ngIf="isSearchbarOpened"
+                   [showCancelButton]="true"
+                   (search)="onSearch($event)"
+                   (ionCancel)="isSearchbarOpened=false"
+    ></ion-searchbar>
+    <ion-buttons end>
+      <button ion-button icon-only
+              *ngIf="!isSearchbarOpened"
+              (click)="isSearchbarOpened=true">
+        <ion-icon name="search"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content class="my-container" padding>
+
+  <ion-card *ngFor="let item of items" >
+    <div (click)="voirDetail(item.id)">
+    <img [src]="item.thumbnailUrl"/>
+    <ion-card-content>
+      <ion-card-title>
+        {{item.title}}
+      </ion-card-title>
+      <p>
+        <ion-icon name="heart" item-start></ion-icon>
+        likes: {{item.id}}
+     /
+        <ion-icon name="eye" item-start></ion-icon>
+        vues: {{item.id}}
+      </p>
+    </ion-card-content>
+      </div>
+  </ion-card>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content
+    loadingSpinner="bubbles"
+    loadingText="Chargement en cour ==> Immob"
+    ></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
