--- a/src/pages/payement/payement.html
+++ b/src/pages/payement/payement.html
@@ -1,18 +1,9 @@
-<!--
-  Generated template for the PayementPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>payement</ion-title>
+    <ion-title>Payement</ion-title>
   </ion-navbar>
 
 </ion-header>
-
-
 <ion-content padding>
 
 </ion-content>
