--- a/src/pages/compte/compte.html
+++ b/src/pages/compte/compte.html
@@ -6,7 +6,10 @@
 -->
 <ion-header color="primary">
 
-  <ion-navbar>
+  <ion-navbar color="primary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Mon compte</ion-title>
   </ion-navbar>
 
@@ -14,7 +17,13 @@
 
 
 <ion-content padding>
-  <ion-list>
+<div class="bar-profile">
+  <div class="profile">
+    <img class="profile-picture" src="assets/imgs/reap.jpg" />
+    <h3 class="name">Immob</h3>
+  </div>
+</div>
+  <ion-list >
     <ion-item *ngFor="let m of menus" (click)="onPage(m.component)">
       <ion-icon name="{{m.icon}}" item-start></ion-icon>
       {{m.title}}
