--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Immob</ion-title>
   </ion-navbar>
 
@@ -14,9 +14,54 @@
 
 
 <ion-content >
+
   <ion-card>
-    <img src="/assets/imgs/pub.jpg"/>
-    <div class="card-title">Togo</div>
-    <div class="card-subtitle">64 rue de l'oqam</div>
+
+    <img src="/assets/imgs/pub.jpg">
+    <ion-card-content class="buttonstyle">
+      <p>
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+      </p>
+      <ion-grid text-center>
+        <ion-row wrap>
+          <ion-col width-25>  <button ion-button round icon-right color="secondary" >
+            <ion-icon name="person"> Visiter</ion-icon>
+
+          </button></ion-col>
+          <ion-col width-25> <button ion-button round icon-right color="blue" >
+            <ion-icon name="card"> Louer</ion-icon>
+
+          </button></ion-col>
+          <ion-col width-25>  <button ion-button round icon-right color="jaune" >
+            <ion-icon name="bookmark"> Epingler </ion-icon>
+
+          </button></ion-col>
+        </ion-row>
+
+      </ion-grid>
+
+    </ion-card-content>
+    <ion-item>
+      <ion-icon color="primary" name="ios-navigate-outline" item-left large></ion-icon>
+      <p>Red Fort, Netaji Subhash Marg, <br>Chandni Chowk, New Delhi</p>
+    </ion-item>
+    <ion-item>
+      <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/wyVM1evRxNw" frameborder="0" width="100%" height="315"></iframe>
+      </div>
+    </ion-item>
+    <ion-item>
+      <ion-slides pager>
+        <ion-slide>
+          <img src="assets/dummy/eagle.jpg">
+        </ion-slide>
+        <ion-slide>
+          <img src="assets/dummy/lion.jpg">
+        </ion-slide>
+        <ion-slide>
+          <img src="assets/dummy/iguana.jpg">
+        </ion-slide>
+      </ion-slides>
+    </ion-item>
   </ion-card>
 </ion-content>
