--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -28,7 +28,7 @@
             <ion-icon name="person"> Visiter</ion-icon>
 
           </button></ion-col>
-          <ion-col width-25> <button ion-button round icon-right color="blue" >
+          <ion-col width-25> <button ion-button round icon-right color="blue" (click)="louer()" >
             <ion-icon name="card"> Louer</ion-icon>
 
           </button></ion-col>
