--- a/src/pages/compte-historic-com/compte-historic-com.html
+++ b/src/pages/compte-historic-com/compte-historic-com.html
@@ -7,21 +7,48 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>compteHistoricCom</ion-title>
+    <ion-title>Historique des operations</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-  <ion-searchbar
-    [(ngModel)]="myInput"
-    [showCancelButton]="shouldShowCancel"
-    (ionInput)="onInput($event)"
-    (ionCancel)="onCancel($event)">
-  </ion-searchbar>
+<ion-content class="my-container">
+  <ion-card>
+<ion-card-header class="cardheader">
+  Operation : #numero de l'operation#
+</ion-card-header>
+      <ion-card-content>
+        <ion-item-group>
+          <ion-item>
+            Date:
+          </ion-item>
+          <ion-item>
+            Numero de l'article:
+          </ion-item>
+          <ion-item>
+            Prix:
+          </ion-item>
+        </ion-item-group>
+      </ion-card-content>
+  </ion-card>
 
-
-
-
+  <ion-card>
+    <ion-card-header class="cardheader">
+      Operation : #numero de l'operation#
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item-group>
+        <ion-item>
+          Date:
+        </ion-item>
+        <ion-item>
+          Numero de l'article:
+        </ion-item>
+        <ion-item>
+          Prix:
+        </ion-item>
+      </ion-item-group>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
