--- a/src/pages/payement/payement.html
+++ b/src/pages/payement/payement.html
@@ -6,4 +6,15 @@
 </ion-header>
 <ion-content padding>
 
+<!--ion-input [(ngModel)]="cardinfo.number" placeholder="card number"></ion-input>
+  <ion-input [(ngModel)]="cardinfo.expMonth" placeholder="exp Month"></ion-input>
+  <ion-input [(ngModel)]="cardinfo.expYear" placeholder="exp Year"></ion-input>
+  <ion-input [(ngModel)]="cardinfo.cvc" placeholder="cvc"></ion-input>
+<button-- ion-button (click)="payer()">acheter </button-->
+
+  <ion-input  placeholder="card number"></ion-input>
+  <ion-input placeholder="exp Month"></ion-input>
+  <ion-input  placeholder="exp Year"></ion-input>
+  <ion-input  placeholder="cvc"></ion-input>
+  <button ion-button (click)="payer()">acheter </button>
 </ion-content>
