modification compte et paramètre désolé pour le retard!!

--- a/src/pages/compte/compte.html
+++ b/src/pages/compte/compte.html
@@ -17,10 +17,13 @@
 
 
 <ion-content padding>
-<div class="bar-profile">
+<div class="bar-profile" style="background-color: #dfdfdf">
   <div class="profile">
+
     <img class="profile-picture" src="assets/imgs/reap.jpg" />
     <h3 class="name">Immob</h3>
+
+
   </div>
 </div>
   <ion-list >
