--- a/src/pages/compte/compte.html
+++ b/src/pages/compte/compte.html
@@ -4,19 +4,19 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header color="primary">
+<ion-header no-border>
 
-  <ion-navbar color="primary">
+  <ion-navbar  transparent>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Mon compte</ion-title>
+    <ion-title style="color: black">Mon compte</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content class="mon-container" padding>
 <div class="bar-profile" style="background-color: #dfdfdf">
   <div class="profile">
 
