--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -4,64 +4,86 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header no-border>
 
-  <ion-navbar color="primary">
+  <ion-navbar transparent>
     <ion-title>Immob</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content >
+<ion-content class="my-container" >
+  <ion-card style="background-color: #a8a8a8">
+    <ion-card-content>
+      <img src="/assets/imgs/pub.jpg">
+      <br>
+      <p>TOGO-LOME-TOKOIN</p>
+    </ion-card-content>
 
-  <ion-card>
-
-    <img src="/assets/imgs/pub.jpg">
+  </ion-card>
+  <ion-card style="background-color: #a8a8a8">
+    <ion-card-content>
+      La phrase 2 identifie des services supplémentaires qui ne sont proposés qu’aux clients de la banque porteurs d’une carte de crédit de cette dernière. Il s’agit donc d’un profil différent du précédent, que nous matérialisons par un deuxième acteur, appelé client banque
+    </ion-card-content>
+  </ion-card>
+  <ion-card style="background-color: #3c3f41">
     <ion-card-content class="buttonstyle">
-      <p>
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-      </p>
-      <ion-grid text-center>
-        <ion-row wrap>
-          <ion-col width-25>  <button ion-button round icon-right color="secondary" >
-            <ion-icon name="person"> Visiter</ion-icon>
+      <ion-grid style="text-align: center">
+        <ion-row>
+          <ion-col col-4 style="background-color: #cccccc">
+            img1
+          </ion-col>
+          <ion-col col-4 style="background-color: #cccccc">
+            img2
+          </ion-col>
+          <ion-col col-4 style="background-color: #cccccc">
+            img3
 
-          </button></ion-col>
-          <ion-col width-25> <button ion-button round icon-right color="blue" (click)="louer()" >
-            <ion-icon name="card"> Louer</ion-icon>
-
-          </button></ion-col>
-          <ion-col width-25>  <button ion-button round icon-right color="jaune" >
-            <ion-icon name="bookmark"> Epingler </ion-icon>
-
-          </button></ion-col>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-4 style="background-color: #cccccc">
+            img4
+          </ion-col>
+          <ion-col col-4 style="background-color: #cccccc">
+            img5
+          </ion-col>
+          <ion-col col-4 style="background-color: #cccccc">
+            img6
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-4 style="background-color: #cccccc">
+            img4
+          </ion-col>
+          <ion-col col-4 style="background-color: #cccccc">
+            img5
+          </ion-col>
+          <ion-col col-4 style="background-color: #cccccc">
+            img6
+          </ion-col>
         </ion-row>
 
       </ion-grid>
-
     </ion-card-content>
-    <ion-item>
-      <ion-icon color="primary" name="ios-navigate-outline" item-left large></ion-icon>
-      <p>Red Fort, Netaji Subhash Marg, <br>Chandni Chowk, New Delhi</p>
-    </ion-item>
+
+  </ion-card>
+  <ion-card>
     <ion-item>
       <div class="video-container">
         <iframe src="https://www.youtube.com/embed/wyVM1evRxNw" frameborder="0" width="100%" height="315"></iframe>
       </div>
     </ion-item>
-    <ion-item>
-      <ion-slides pager>
-        <ion-slide>
-          <img src="assets/dummy/eagle.jpg">
-        </ion-slide>
-        <ion-slide>
-          <img src="assets/dummy/lion.jpg">
-        </ion-slide>
-        <ion-slide>
-          <img src="assets/dummy/iguana.jpg">
-        </ion-slide>
-      </ion-slides>
-    </ion-item>
   </ion-card>
+  <ion-grid style=" ; position: fixed; top: 80%">
+    <ion-row>
+      <ion-col col-6 style="text-align: center">
+        <ion-buttons ion-button style=" background-color:#18a15f" full large> ACHETER</ion-buttons>
+      </ion-col>
+      <ion-col col-6 style="text-align: center">
+        <ion-buttons ion-button  style=" background-color:#18a15f" full large> LOUER</ion-buttons>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
