--- a/src/pages/compte/compte.html
+++ b/src/pages/compte/compte.html
@@ -18,18 +18,73 @@
 
 <ion-content class="mon-container" padding>
 <div class="bar-profile" style="background-color: #dfdfdf">
-  <div class="profile">
 
-    <img class="profile-picture" src="assets/imgs/reap.jpg" />
-    <h3 class="name">Immob</h3>
+    <div class="profile">
 
-
-  </div>
+      <img class="profile-picture" src="assets/imgs/reap.jpg" />
+      <h3 class="name">Immob</h3>
+    </div>
 </div>
-  <ion-list >
+
+  <div style="background-color: #434343;opacity: 0.9%">
+    <ion-grid>
+      <ion-row>
+        <ion-col col-lg-4 style="text-align: center">
+
+            <ion-buttons full outline>
+              <ion-icon name="md-camera"></ion-icon>
+            </ion-buttons>
+
+
+        </ion-col>
+        <ion-col col-lg-4 style="text-align: center">
+
+          <ion-buttons full outline>
+            <ion-icon name="md-card"></ion-icon>
+          </ion-buttons>
+        </ion-col>
+        <ion-col col-lg-4 style="text-align: center">
+
+          <ion-buttons full outline>
+            <ion-icon name="md-hammer"></ion-icon>
+          </ion-buttons>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+  <div style="background-color: transparent">
+
+    <ion-item>
+
+      <p style="color: black;font-size: 150%;font-style: normal"> <ion-icon name="md-list"></ion-icon>Historique </p>
+
+    </ion-item>
+  </div>
+
+  <!--ion-list >
     <ion-item *ngFor="let m of menus" (click)="onPage(m.component)">
       <ion-icon name="{{m.icon}}" item-start></ion-icon>
       {{m.title}}
     </ion-item>
-  </ion-list>
+  </--ion-list-->
+
+  <ion-fab bottom right >
+    <button ion-fab ><ion-icon name="md-add"></ion-icon></button>
+    <ion-fab-list side="top">
+
+      <button ion-fab>
+        <ion-icon name="md-help"></ion-icon>
+        <ion-label>Aide</ion-label>
+      </button>
+      <button ion-fab>
+        <ion-icon name="md-bookmark"></ion-icon>
+        <ion-label>Vos Epingle</ion-label>
+      </button>
+      <button ion-fab>
+        <ion-icon name="md-add"></ion-icon>
+        <ion-label>Ajouter immobilier</ion-label>
+      </button>
+    </ion-fab-list>
+
+  </ion-fab>
 </ion-content>
