--- a/src/pages/inscription/inscription.html
+++ b/src/pages/inscription/inscription.html
@@ -1,18 +1,31 @@
-<!--
-  Generated template for the InscriptionPage page.
+<ion-navbar *navbar>
+  <ion-title>Login</ion-title>
+</ion-navbar>
+<ion-content class="login">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+  <div >
+    <form  *ngIf="afficherTelephone">
+      <ion-item>
+        <ion-label>Saisissez votre numero de telephone</ion-label>
+        <ion-input type="text" name="telephone" [(ngModel)]="tel"></ion-input>
+      </ion-item>
 
-  <ion-navbar>
-    <ion-title>inscription</ion-title>
-  </ion-navbar>
+      <div padding>
+        <button block (click)="login()">Valider</button>
+      </div>
 
-</ion-header>
+    </form>
+    <form  *ngIf="afficherCodePage">
+      <ion-item>
+        <ion-label>Saisissez le code recu en SMS</ion-label>
+        <ion-input type="text" name="code" [(ngModel)]="codeConf"></ion-input>
+      </ion-item>
 
+      <div padding>
+        <button block (click)="confirmCode(codeConf)">Valider</button>
+      </div>
 
-<ion-content padding>
+    </form>
 
+  </div>
 </ion-content>
