--- a/src/pages/mesimmob/mesimmob.html
+++ b/src/pages/mesimmob/mesimmob.html
@@ -4,9 +4,9 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header color="primary">
+<ion-header no-border="">
 
-  <ion-navbar color="primary">
+  <ion-navbar transparent="">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
