--- a/src/pages/parametre/parametre.html
+++ b/src/pages/parametre/parametre.html
@@ -4,13 +4,13 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header no-border>
 
-  <ion-navbar  color="primary">
+  <ion-navbar transparent>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>parametres</ion-title>
+    <ion-title>Paramètres</ion-title>
   </ion-navbar>
 
 </ion-header>
