--- a/src/pages/payement/payement.html
+++ b/src/pages/payement/payement.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-navbar>
+<ion-header no-border>
+  <ion-navbar transparent>
     <ion-title>Payement</ion-title>
   </ion-navbar>
 
