--- a/src/pages/add-article/add-article.html
+++ b/src/pages/add-article/add-article.html
@@ -7,6 +7,9 @@
 <ion-header no-border>
 
   <ion-navbar transparent>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Ajouter article</ion-title>
   </ion-navbar>
 
